force-app/main/default/objects/Public_Holiday__c/Public_Holiday__c.object-meta.xml
<CustomObject>
    <description
  >Cache of South African public holidays sourced from the Calendarific API by HolidaySyncService. Public reference data only (no PII) - the guest-facing search reads from here and never calls Calendarific directly.</description>
    <label>Public Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Holidays</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>