force-app/main/default/objects/Public_Holiday__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description
  >Composite key (country-date-slugified name, e.g. ZA-2024-12-25-christmas-day) so the sync job can re-run via upsert without creating duplicates. Includes the name because Calendarific can return more than one holiday on the same date.</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>