force-app/main/default/objects/Public_Holiday__c/fields/Holiday_Date__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Date__c</fullName>
    <label>Holiday Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>