force-app/main/default/objects/Public_Holiday__c/fields/Holiday_Name__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Name__c</fullName>
    <description
  >Full holiday name as returned by Calendarific (the record Name is the same value truncated to 80 characters).</description>
    <label>Holiday Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>