force-app/main/default/objects/Public_Holiday__c/fields/Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Type__c</fullName>
    <description
  >Calendarific primary_type (e.g. National holiday).</description>
    <label>Holiday Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>