force-app/main/default/objects/Public_Holiday__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description
  >Denormalised from Holiday_Date__c so the per-search lookup is a simple equality filter rather than a date range.</description>
    <externalId>true</externalId>
    <label>Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>